POS Application - Sprint 4 - completed JUnit Tests